添加了bus刷新配置的功能以及修复了一些bug

--- a/config/src/main/resources/config/local/gateway.yml
+++ b/config/src/main/resources/config/local/gateway.yml
@@ -26,4 +26,5 @@ zuul:
       sensitiveHeaders: '*'
     svca-service:
       path: /a/**
+      serviceId: svca-service
       sensitiveHeaders: '*'
