--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -30,3 +30,10 @@ eureka:
       defaultZone: http://user:password@192.168.1.200:8761/eureka/
 
 
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: '*'
