--- a/config/src/main/resources/bootstrap.yml
+++ b/config/src/main/resources/bootstrap.yml
@@ -41,6 +41,14 @@ eureka:
     serviceUrl:
       defaultZone: http://user:password@192.168.1.200:8761/eureka/
 
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
 #---
 #spring:
 #  profiles: native
