--- a/svca-service/src/main/resources/bootstrap.yml
+++ b/svca-service/src/main/resources/bootstrap.yml
@@ -36,3 +36,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://user:password@192.168.1.200:8761/eureka/
+
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: '*'
