--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>monitor</module>
         <module>auth-service</module>
         <module>svca-service</module>
+        <module>svcb-service</module>
     </modules>
 
     <properties>
