--- a/config/src/main/resources/bootstrap.yml
+++ b/config/src/main/resources/bootstrap.yml
@@ -23,9 +23,9 @@ spring:
   boot:
     admin:
       client:
-        url: http://user:password@192.168.1.200:8040
         instance:
           prefer-ip: true
+          service-base-url: http://user:password@192.168.1.200:8040
   rabbitmq:
     host: 192.168.1.200
     username: guest
