--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -19,6 +19,7 @@ spring:
   boot:
     admin:
       client:
+        url: http://user:password@192.168.1.200:8040
         instance:
           prefer-ip: true
           service-base-url: http://user:password@192.168.1.200:8040
