--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -29,6 +29,7 @@ spring:
   boot:
     admin:
       client:
+        url: http://user:password@192.168.1.200:8040
         instance:
           prefer-ip: true
           service-base-url: http://user:password@192.168.1.200:8040
